; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_svc.c_bfa_fcport_event_register.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_svc.c_bfa_fcport_event_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_s = type { i32 }
%struct.bfa_fcport_s = type { void (i8*, i32)*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bfa_fcport_event_register(%struct.bfa_s* %0, {}* %1, i8* %2) #0 {
  %4 = alloca %struct.bfa_s*, align 8
  %5 = alloca {}*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.bfa_fcport_s*, align 8
  store %struct.bfa_s* %0, %struct.bfa_s** %4, align 8
  store {}* %1, {}** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.bfa_s*, %struct.bfa_s** %4, align 8
  %9 = call %struct.bfa_fcport_s* @BFA_FCPORT_MOD(%struct.bfa_s* %8)
  store %struct.bfa_fcport_s* %9, %struct.bfa_fcport_s** %7, align 8
  %10 = load {}*, {}** %5, align 8
  %11 = bitcast {}* %10 to void (i8*, i32)*
  %12 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %7, align 8
  %13 = getelementptr inbounds %struct.bfa_fcport_s, %struct.bfa_fcport_s* %12, i32 0, i32 0
  store void (i8*, i32)* %11, void (i8*, i32)** %13, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load %struct.bfa_fcport_s*, %struct.bfa_fcport_s** %7, align 8
  %16 = getelementptr inbounds %struct.bfa_fcport_s, %struct.bfa_fcport_s* %15, i32 0, i32 1
  store i8* %14, i8** %16, align 8
  ret void
}

declare dso_local %struct.bfa_fcport_s* @BFA_FCPORT_MOD(%struct.bfa_s*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
